--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
@@ -34,7 +32,7 @@
     "from citipy import citipy\n",
     "\n",
     "# Output File (CSV)\n",
-    "output_data_file = \"output_data/cities.csv\"\n",
+    "output_data_file = \"cities.csv\"\n",
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
@@ -50,16 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "605"
-      ]
+      "text/plain": "610"
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,6 +90,13 @@
     "* Perform a weather check on each city using a series of successive API calls.\n",
     "* Include a print log of each city as it'sbeing processed (with the city number and city name).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1356,9 +1359,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda1f272b08825b44268b0b382f97a12fd9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1370,7 +1373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
