--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -110,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b31a96135f9540578ec305e26bbba8c9",
+       "model_id": "f8d278c6b2174a1d8c26bb1ea3ba9726",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,9 +129,7 @@
    "source": [
     "fig = gmaps.figure()\n",
     "\n",
-    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \n",
-    "                                 dissipating=False, max_intensity=100,\n",
-    "                                 point_radius = 1)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, dissipating=False, max_intensity=100, point_radius = 1)\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
     "fig"
@@ -150,10 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Cloudiness</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Humidity</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Wind Speed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>79</td>\n      <td>port alfred</td>\n      <td>94.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>95.0</td>\n      <td>-33.59</td>\n      <td>26.89</td>\n      <td>16.67</td>\n      <td>8.42</td>\n    </tr>\n    <tr>\n      <td>96</td>\n      <td>butaritari</td>\n      <td>95.0</td>\n      <td>KI</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>29.10</td>\n      <td>9.02</td>\n    </tr>\n    <tr>\n      <td>154</td>\n      <td>richards bay</td>\n      <td>100.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>81.0</td>\n      <td>-28.78</td>\n      <td>32.04</td>\n      <td>25.85</td>\n      <td>10.64</td>\n    </tr>\n    <tr>\n      <td>183</td>\n      <td>kununurra</td>\n      <td>90.0</td>\n      <td>AU</td>\n      <td>1.582838e+09</td>\n      <td>94.0</td>\n      <td>-15.77</td>\n      <td>128.73</td>\n      <td>26.00</td>\n      <td>8.70</td>\n    </tr>\n    <tr>\n      <td>237</td>\n      <td>conceicao da barra</td>\n      <td>45.0</td>\n      <td>BR</td>\n      <td>1.582838e+09</td>\n      <td>82.0</td>\n      <td>-18.59</td>\n      <td>-39.73</td>\n      <td>27.52</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <td>244</td>\n      <td>praia da vitoria</td>\n      <td>40.0</td>\n      <td>PT</td>\n      <td>1.582838e+09</td>\n      <td>93.0</td>\n      <td>38.73</td>\n      <td>-27.07</td>\n      <td>17.00</td>\n      <td>8.12</td>\n    </tr>\n    <tr>\n      <td>418</td>\n      <td>sulangan</td>\n      <td>90.0</td>\n      <td>PH</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>11.14</td>\n      <td>123.72</td>\n      <td>26.61</td>\n      <td>9.86</td>\n    </tr>\n    <tr>\n      <td>520</td>\n      <td>mogadishu</td>\n      <td>100.0</td>\n      <td>SO</td>\n      <td>1.582838e+09</td>\n      <td>84.0</td>\n      <td>2.04</td>\n      <td>45.34</td>\n      <td>27.20</td>\n      <td>9.13</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                   City  Cloudiness Country          Date  Humidity    Lat  \\\n79          port alfred        94.0      ZA  1.582838e+09      95.0 -33.59   \n96           butaritari        95.0      KI  1.582838e+09      80.0   3.07   \n154        richards bay       100.0      ZA  1.582838e+09      81.0 -28.78   \n183           kununurra        90.0      AU  1.582838e+09      94.0 -15.77   \n237  conceicao da barra        45.0      BR  1.582838e+09      82.0 -18.59   \n244    praia da vitoria        40.0      PT  1.582838e+09      93.0  38.73   \n418            sulangan        90.0      PH  1.582838e+09      80.0  11.14   \n520           mogadishu       100.0      SO  1.582838e+09      84.0   2.04   \n\n        Lng  Max Temp  Wind Speed  \n79    26.89     16.67        8.42  \n96   172.79     29.10        9.02  \n154   32.04     25.85       10.64  \n183  128.73     26.00        8.70  \n237  -39.73     27.52       10.00  \n244  -27.07     17.00        8.12  \n418  123.72     26.61        9.86  \n520   45.34     27.20        9.13  "
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ideal_weather = cities_df.loc[max_temp < 30].loc[max_temp > 10].loc[wind_speed > 8].loc[clouds > 20]\n",
+    "ideal_weather['Lat'] = pd.to_numeric(ideal_weather['Lat'])\n",
+    "ideal_weather['Lng'] = pd.to_numeric(ideal_weather['Lng'])\n",
+    "ideal_weather"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,25 +185,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "City           object\nCloudiness    float64\nCountry        object\nDate          float64\nHumidity      float64\nLat           float64\nLng           float64\nMax Temp      float64\nWind Speed    float64\nHotel Name     object\ndtype: object"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "hotel_df = ideal_weather\n",
+    "hotel_df['Hotel Name'] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Retrieving Results for: port alfred.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: butaritari.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: richards bay.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: kununurra.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: conceicao da barra.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: praia da vitoria.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: sulangan.\n"
+    }
+   ],
+   "source": [
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "params = {\"type\":\"lodging\",\"key\":g_key,\"radius\":5000}\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "\n",
+    "    lat = row['Lat']\n",
+    "    lng = row['Lng']\n",
+    "    params['location'] = lat, lng\n",
+    "\n",
+    "    print(f\"Retrieving Results for: {row['City']}.\")\n",
+    "    response = requests.get(base_url, params=params).json()\n",
+    "    # results = response['results']\n",
+    "    print(response)\n",
+    "\n",
+    "    # try:\n",
+    "    #     # print(f\"Closest hotel is {results[0]['name']}.\")     \n",
+    "    #     # hotel_df.loc[index, 'Hotel Name'] = results[0]['name']\n",
+    "        \n",
+    "    # except (KeyError, IndexError):\n",
+    "    #     print(\"Missing field/result... skipping.\")\n",
+    "        \n",
+    "    # print(\"------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Cloudiness</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Humidity</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Wind Speed</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>79</td>\n      <td>port alfred</td>\n      <td>94.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>95.0</td>\n      <td>-33.59</td>\n      <td>26.89</td>\n      <td>16.67</td>\n      <td>8.42</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>96</td>\n      <td>butaritari</td>\n      <td>95.0</td>\n      <td>KI</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>29.10</td>\n      <td>9.02</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>154</td>\n      <td>richards bay</td>\n      <td>100.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>81.0</td>\n      <td>-28.78</td>\n      <td>32.04</td>\n      <td>25.85</td>\n      <td>10.64</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>183</td>\n      <td>kununurra</td>\n      <td>90.0</td>\n      <td>AU</td>\n      <td>1.582838e+09</td>\n      <td>94.0</td>\n      <td>-15.77</td>\n      <td>128.73</td>\n      <td>26.00</td>\n      <td>8.70</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>237</td>\n      <td>conceicao da barra</td>\n      <td>45.0</td>\n      <td>BR</td>\n      <td>1.582838e+09</td>\n      <td>82.0</td>\n      <td>-18.59</td>\n      <td>-39.73</td>\n      <td>27.52</td>\n      <td>10.00</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>244</td>\n      <td>praia da vitoria</td>\n      <td>40.0</td>\n      <td>PT</td>\n      <td>1.582838e+09</td>\n      <td>93.0</td>\n      <td>38.73</td>\n      <td>-27.07</td>\n      <td>17.00</td>\n      <td>8.12</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>418</td>\n      <td>sulangan</td>\n      <td>90.0</td>\n      <td>PH</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>11.14</td>\n      <td>123.72</td>\n      <td>26.61</td>\n      <td>9.86</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>520</td>\n      <td>mogadishu</td>\n      <td>100.0</td>\n      <td>SO</td>\n      <td>1.582838e+09</td>\n      <td>84.0</td>\n      <td>2.04</td>\n      <td>45.34</td>\n      <td>27.20</td>\n      <td>9.13</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                   City  Cloudiness Country          Date  Humidity    Lat  \\\n79          port alfred        94.0      ZA  1.582838e+09      95.0 -33.59   \n96           butaritari        95.0      KI  1.582838e+09      80.0   3.07   \n154        richards bay       100.0      ZA  1.582838e+09      81.0 -28.78   \n183           kununurra        90.0      AU  1.582838e+09      94.0 -15.77   \n237  conceicao da barra        45.0      BR  1.582838e+09      82.0 -18.59   \n244    praia da vitoria        40.0      PT  1.582838e+09      93.0  38.73   \n418            sulangan        90.0      PH  1.582838e+09      80.0  11.14   \n520           mogadishu       100.0      SO  1.582838e+09      84.0   2.04   \n\n        Lng  Max Temp  Wind Speed Hotel Name  \n79    26.89     16.67        8.42             \n96   172.79     29.10        9.02             \n154   32.04     25.85       10.64             \n183  128.73     26.00        8.70             \n237  -39.73     27.52       10.00             \n244  -27.07     17.00        8.12             \n418  123.72     26.61        9.86             \n520   45.34     27.20        9.13             "
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df\n"
    ]
   },
   {
@@ -221,10 +286,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hotel_layer = gmaps.symbol_layer(locations, fill_color='rgba(0, 150, 0, 0.4)', stroke_color='rgba(0, 0, 150, 0.4)', scale=2, info_box_content=hotel_info)\n",
+    "\n",
     "# Add marker layer ontop of heat map\n",
+    "fig = gmaps.figure()\n",
     "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(hotel_layer)\n",
     "\n",
-    "# Display Map"
+    "# Display Map\n",
+    "fig"
    ]
   }
  ],
