Working VacatinPy notebook

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -26,6 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "import json\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key\n"
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8d278c6b2174a1d8c26bb1ea3ba9726",
+       "model_id": "0da1da9ef5b442da930a356a8c1f12f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Cloudiness</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Humidity</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Wind Speed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>79</td>\n      <td>port alfred</td>\n      <td>94.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>95.0</td>\n      <td>-33.59</td>\n      <td>26.89</td>\n      <td>16.67</td>\n      <td>8.42</td>\n    </tr>\n    <tr>\n      <td>96</td>\n      <td>butaritari</td>\n      <td>95.0</td>\n      <td>KI</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>29.10</td>\n      <td>9.02</td>\n    </tr>\n    <tr>\n      <td>154</td>\n      <td>richards bay</td>\n      <td>100.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>81.0</td>\n      <td>-28.78</td>\n      <td>32.04</td>\n      <td>25.85</td>\n      <td>10.64</td>\n    </tr>\n    <tr>\n      <td>183</td>\n      <td>kununurra</td>\n      <td>90.0</td>\n      <td>AU</td>\n      <td>1.582838e+09</td>\n      <td>94.0</td>\n      <td>-15.77</td>\n      <td>128.73</td>\n      <td>26.00</td>\n      <td>8.70</td>\n    </tr>\n    <tr>\n      <td>237</td>\n      <td>conceicao da barra</td>\n      <td>45.0</td>\n      <td>BR</td>\n      <td>1.582838e+09</td>\n      <td>82.0</td>\n      <td>-18.59</td>\n      <td>-39.73</td>\n      <td>27.52</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <td>244</td>\n      <td>praia da vitoria</td>\n      <td>40.0</td>\n      <td>PT</td>\n      <td>1.582838e+09</td>\n      <td>93.0</td>\n      <td>38.73</td>\n      <td>-27.07</td>\n      <td>17.00</td>\n      <td>8.12</td>\n    </tr>\n    <tr>\n      <td>418</td>\n      <td>sulangan</td>\n      <td>90.0</td>\n      <td>PH</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>11.14</td>\n      <td>123.72</td>\n      <td>26.61</td>\n      <td>9.86</td>\n    </tr>\n    <tr>\n      <td>520</td>\n      <td>mogadishu</td>\n      <td>100.0</td>\n      <td>SO</td>\n      <td>1.582838e+09</td>\n      <td>84.0</td>\n      <td>2.04</td>\n      <td>45.34</td>\n      <td>27.20</td>\n      <td>9.13</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "                   City  Cloudiness Country          Date  Humidity    Lat  \\\n79          port alfred        94.0      ZA  1.582838e+09      95.0 -33.59   \n96           butaritari        95.0      KI  1.582838e+09      80.0   3.07   \n154        richards bay       100.0      ZA  1.582838e+09      81.0 -28.78   \n183           kununurra        90.0      AU  1.582838e+09      94.0 -15.77   \n237  conceicao da barra        45.0      BR  1.582838e+09      82.0 -18.59   \n244    praia da vitoria        40.0      PT  1.582838e+09      93.0  38.73   \n418            sulangan        90.0      PH  1.582838e+09      80.0  11.14   \n520           mogadishu       100.0      SO  1.582838e+09      84.0   2.04   \n\n        Lng  Max Temp  Wind Speed  \n79    26.89     16.67        8.42  \n96   172.79     29.10        9.02  \n154   32.04     25.85       10.64  \n183  128.73     26.00        8.70  \n237  -39.73     27.52       10.00  \n244  -27.07     17.00        8.12  \n418  123.72     26.61        9.86  \n520   45.34     27.20        9.13  "
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,18 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "City           object\nCloudiness    float64\nCountry        object\nDate          float64\nHumidity      float64\nLat           float64\nLng           float64\nMax Temp      float64\nWind Speed    float64\nHotel Name     object\ndtype: object"
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hotel_df = ideal_weather\n",
     "hotel_df['Hotel Name'] = \"\""
@@ -204,52 +196,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Retrieving Results for: port alfred.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: butaritari.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: richards bay.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: kununurra.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: conceicao da barra.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: praia da vitoria.\n{'html_attributions': [], 'results': [], 'status': 'INVALID_REQUEST'}\nRetrieving Results for: sulangan.\n"
+     "text": "Retrieving Results for: port alfred.\nClosest hotel is The Halyards Hotel.\n------------\nRetrieving Results for: butaritari.\nClosest hotel is Isles Sunset Lodge.\n------------\nRetrieving Results for: richards bay.\nClosest hotel is BON Hotel Waterfront Richards Bay.\n------------\nRetrieving Results for: kununurra.\nClosest hotel is Hotel Kununurra.\n------------\nRetrieving Results for: conceicao da barra.\nClosest hotel is Cricaré Praia Hotel.\n------------\nRetrieving Results for: praia da vitoria.\nClosest hotel is Hotel Branco I.\n------------\nRetrieving Results for: sulangan.\nClosest hotel is Maia's Beach Resort.\n------------\nRetrieving Results for: mogadishu.\nClosest hotel is Hotel Juba.\n------------\n"
     }
    ],
    "source": [
     "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "\n",
-    "params = {\"type\":\"lodging\",\"key\":g_key,\"radius\":5000}\n",
+    "params = {\"type\":\"lodging\",\"key\":g_key,\"radius\":\"5000\"}\n",
     "\n",
     "for index, row in hotel_df.iterrows():\n",
     "\n",
     "    lat = row['Lat']\n",
     "    lng = row['Lng']\n",
-    "    params['location'] = lat, lng\n",
+    "    params['location'] = f'{lat}, {lng}'\n",
     "\n",
     "    print(f\"Retrieving Results for: {row['City']}.\")\n",
     "    response = requests.get(base_url, params=params).json()\n",
-    "    # results = response['results']\n",
-    "    print(response)\n",
+    "    results = response['results']\n",
+    "    # print(response)\n",
     "\n",
-    "    # try:\n",
-    "    #     # print(f\"Closest hotel is {results[0]['name']}.\")     \n",
-    "    #     # hotel_df.loc[index, 'Hotel Name'] = results[0]['name']\n",
+    "    try:\n",
+    "        print(f\"Closest hotel is {results[0]['name']}.\")  \n",
+    "        hotel_df.loc[index, 'Hotel Name'] = results[0]['name']\n",
     "        \n",
-    "    # except (KeyError, IndexError):\n",
-    "    #     print(\"Missing field/result... skipping.\")\n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n",
     "        \n",
-    "    # print(\"------------\")"
+    "    print(\"------------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Cloudiness</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Humidity</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Wind Speed</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>79</td>\n      <td>port alfred</td>\n      <td>94.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>95.0</td>\n      <td>-33.59</td>\n      <td>26.89</td>\n      <td>16.67</td>\n      <td>8.42</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>96</td>\n      <td>butaritari</td>\n      <td>95.0</td>\n      <td>KI</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>29.10</td>\n      <td>9.02</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>154</td>\n      <td>richards bay</td>\n      <td>100.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>81.0</td>\n      <td>-28.78</td>\n      <td>32.04</td>\n      <td>25.85</td>\n      <td>10.64</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>183</td>\n      <td>kununurra</td>\n      <td>90.0</td>\n      <td>AU</td>\n      <td>1.582838e+09</td>\n      <td>94.0</td>\n      <td>-15.77</td>\n      <td>128.73</td>\n      <td>26.00</td>\n      <td>8.70</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>237</td>\n      <td>conceicao da barra</td>\n      <td>45.0</td>\n      <td>BR</td>\n      <td>1.582838e+09</td>\n      <td>82.0</td>\n      <td>-18.59</td>\n      <td>-39.73</td>\n      <td>27.52</td>\n      <td>10.00</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>244</td>\n      <td>praia da vitoria</td>\n      <td>40.0</td>\n      <td>PT</td>\n      <td>1.582838e+09</td>\n      <td>93.0</td>\n      <td>38.73</td>\n      <td>-27.07</td>\n      <td>17.00</td>\n      <td>8.12</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>418</td>\n      <td>sulangan</td>\n      <td>90.0</td>\n      <td>PH</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>11.14</td>\n      <td>123.72</td>\n      <td>26.61</td>\n      <td>9.86</td>\n      <td></td>\n    </tr>\n    <tr>\n      <td>520</td>\n      <td>mogadishu</td>\n      <td>100.0</td>\n      <td>SO</td>\n      <td>1.582838e+09</td>\n      <td>84.0</td>\n      <td>2.04</td>\n      <td>45.34</td>\n      <td>27.20</td>\n      <td>9.13</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                   City  Cloudiness Country          Date  Humidity    Lat  \\\n79          port alfred        94.0      ZA  1.582838e+09      95.0 -33.59   \n96           butaritari        95.0      KI  1.582838e+09      80.0   3.07   \n154        richards bay       100.0      ZA  1.582838e+09      81.0 -28.78   \n183           kununurra        90.0      AU  1.582838e+09      94.0 -15.77   \n237  conceicao da barra        45.0      BR  1.582838e+09      82.0 -18.59   \n244    praia da vitoria        40.0      PT  1.582838e+09      93.0  38.73   \n418            sulangan        90.0      PH  1.582838e+09      80.0  11.14   \n520           mogadishu       100.0      SO  1.582838e+09      84.0   2.04   \n\n        Lng  Max Temp  Wind Speed Hotel Name  \n79    26.89     16.67        8.42             \n96   172.79     29.10        9.02             \n154   32.04     25.85       10.64             \n183  128.73     26.00        8.70             \n237  -39.73     27.52       10.00             \n244  -27.07     17.00        8.12             \n418  123.72     26.61        9.86             \n520   45.34     27.20        9.13             "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>City</th>\n      <th>Cloudiness</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>Humidity</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Wind Speed</th>\n      <th>Hotel Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>79</td>\n      <td>port alfred</td>\n      <td>94.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>95.0</td>\n      <td>-33.59</td>\n      <td>26.89</td>\n      <td>16.67</td>\n      <td>8.42</td>\n      <td>The Halyards Hotel</td>\n    </tr>\n    <tr>\n      <td>96</td>\n      <td>butaritari</td>\n      <td>95.0</td>\n      <td>KI</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>3.07</td>\n      <td>172.79</td>\n      <td>29.10</td>\n      <td>9.02</td>\n      <td>Isles Sunset Lodge</td>\n    </tr>\n    <tr>\n      <td>154</td>\n      <td>richards bay</td>\n      <td>100.0</td>\n      <td>ZA</td>\n      <td>1.582838e+09</td>\n      <td>81.0</td>\n      <td>-28.78</td>\n      <td>32.04</td>\n      <td>25.85</td>\n      <td>10.64</td>\n      <td>BON Hotel Waterfront Richards Bay</td>\n    </tr>\n    <tr>\n      <td>183</td>\n      <td>kununurra</td>\n      <td>90.0</td>\n      <td>AU</td>\n      <td>1.582838e+09</td>\n      <td>94.0</td>\n      <td>-15.77</td>\n      <td>128.73</td>\n      <td>26.00</td>\n      <td>8.70</td>\n      <td>Hotel Kununurra</td>\n    </tr>\n    <tr>\n      <td>237</td>\n      <td>conceicao da barra</td>\n      <td>45.0</td>\n      <td>BR</td>\n      <td>1.582838e+09</td>\n      <td>82.0</td>\n      <td>-18.59</td>\n      <td>-39.73</td>\n      <td>27.52</td>\n      <td>10.00</td>\n      <td>Cricaré Praia Hotel</td>\n    </tr>\n    <tr>\n      <td>244</td>\n      <td>praia da vitoria</td>\n      <td>40.0</td>\n      <td>PT</td>\n      <td>1.582838e+09</td>\n      <td>93.0</td>\n      <td>38.73</td>\n      <td>-27.07</td>\n      <td>17.00</td>\n      <td>8.12</td>\n      <td>Hotel Branco I</td>\n    </tr>\n    <tr>\n      <td>418</td>\n      <td>sulangan</td>\n      <td>90.0</td>\n      <td>PH</td>\n      <td>1.582838e+09</td>\n      <td>80.0</td>\n      <td>11.14</td>\n      <td>123.72</td>\n      <td>26.61</td>\n      <td>9.86</td>\n      <td>Maia's Beach Resort</td>\n    </tr>\n    <tr>\n      <td>520</td>\n      <td>mogadishu</td>\n      <td>100.0</td>\n      <td>SO</td>\n      <td>1.582838e+09</td>\n      <td>84.0</td>\n      <td>2.04</td>\n      <td>45.34</td>\n      <td>27.20</td>\n      <td>9.13</td>\n      <td>Hotel Juba</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                   City  Cloudiness Country          Date  Humidity    Lat  \\\n79          port alfred        94.0      ZA  1.582838e+09      95.0 -33.59   \n96           butaritari        95.0      KI  1.582838e+09      80.0   3.07   \n154        richards bay       100.0      ZA  1.582838e+09      81.0 -28.78   \n183           kununurra        90.0      AU  1.582838e+09      94.0 -15.77   \n237  conceicao da barra        45.0      BR  1.582838e+09      82.0 -18.59   \n244    praia da vitoria        40.0      PT  1.582838e+09      93.0  38.73   \n418            sulangan        90.0      PH  1.582838e+09      80.0  11.14   \n520           mogadishu       100.0      SO  1.582838e+09      84.0   2.04   \n\n        Lng  Max Temp  Wind Speed                         Hotel Name  \n79    26.89     16.67        8.42                 The Halyards Hotel  \n96   172.79     29.10        9.02                 Isles Sunset Lodge  \n154   32.04     25.85       10.64  BON Hotel Waterfront Richards Bay  \n183  128.73     26.00        8.70                    Hotel Kununurra  \n237  -39.73     27.52       10.00                Cricaré Praia Hotel  \n244  -27.07     17.00        8.12                     Hotel Branco I  \n418  123.72     26.61        9.86                Maia's Beach Resort  \n520   45.34     27.20        9.13                         Hotel Juba  "
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,15 +268,28 @@
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in narrowed_city_df.iterrows()]\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
     "locations = hotel_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a64792dc9c649d99ca1a61752d93ab5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": "Figure(layout=FigureLayout(height='420px'))"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "hotel_layer = gmaps.symbol_layer(locations, fill_color='rgba(0, 150, 0, 0.4)', stroke_color='rgba(0, 0, 150, 0.4)', scale=2, info_box_content=hotel_info)\n",
     "\n",
