--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# VacationPy\n",
     "----\n",
@@ -24,6 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "import json\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key\n"
@@ -31,7 +34,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Store Part I results into DataFrame\n",
     "* Load the csv exported in Part I to a DataFrame"
@@ -42,11 +47,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cities_df = pd.read_csv(\"../Weatherpy/cities.csv\")\n",
+    "cities_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_df = cities_df.drop(columns='Unnamed: 0')\n",
+    "cities_df"
+   ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Humidity Heatmap\n",
     "* Configure gmaps.\n",
@@ -60,7 +80,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "gmaps.configure(api_key=g_key)\n",
+    "\n",
+    "locations = cities_df[[\"Lat\", \"Lng\"]]\n",
+    "clouds = cities_df['Cloudiness']\n",
+    "humidity = cities_df['Humidity']\n",
+    "max_temp = cities_df['Max Temp']\n",
+    "wind_speed = cities_df['Wind Speed']"
    ]
   },
   {
@@ -69,12 +95,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "fig = gmaps.figure()\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, dissipating=False, max_intensity=100, point_radius = 1)\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "fig"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Create new DataFrame fitting weather criteria\n",
     "* Narrow down the cities to fit weather conditions.\n",
@@ -86,11 +119,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ideal_weather = cities_df.loc[max_temp < 30].loc[max_temp > 10].loc[wind_speed > 8].loc[clouds > 20]\n",
+    "ideal_weather['Lat'] = pd.to_numeric(ideal_weather['Lat'])\n",
+    "ideal_weather['Lng'] = pd.to_numeric(ideal_weather['Lng'])\n",
+    "ideal_weather"
+   ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Hotel Map\n",
     "* Store into variable named `hotel_df`.\n",
@@ -106,14 +146,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "hotel_df = ideal_weather\n",
+    "hotel_df['Hotel Name'] = \"\""
+   ]
   },
   {
    "cell_type": "code",
@@ -121,7 +157,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "params = {\"type\":\"lodging\",\"key\":g_key,\"radius\":\"5000\"}\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "\n",
+    "    lat = row['Lat']\n",
+    "    lng = row['Lng']\n",
+    "    params['location'] = f'{lat}, {lng}'\n",
+    "\n",
+    "    print(f\"Retrieving Results for: {row['City']}.\")\n",
+    "    response = requests.get(base_url, params=params).json()\n",
+    "    results = response['results']\n",
+    "    # print(response)\n",
+    "\n",
+    "    try:\n",
+    "        print(f\"Closest hotel is {results[0]['name']}.\")  \n",
+    "        hotel_df.loc[index, 'Hotel Name'] = results[0]['name']\n",
+    "        \n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n",
+    "        \n",
+    "    print(\"------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotel_df\n"
    ]
   },
   {
@@ -142,7 +209,7 @@
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in narrowed_city_df.iterrows()]\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
     "locations = hotel_df[[\"Lat\", \"Lng\"]]"
    ]
   },
@@ -152,18 +219,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hotel_layer = gmaps.symbol_layer(locations, fill_color='rgba(0, 150, 0, 0.4)', stroke_color='rgba(0, 0, 150, 0.4)', scale=2, info_box_content=hotel_info)\n",
+    "\n",
     "# Add marker layer ontop of heat map\n",
+    "fig = gmaps.figure()\n",
     "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(hotel_layer)\n",
     "\n",
-    "# Display Map"
+    "# Display Map\n",
+    "fig"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "pydev"
+   "name": "python37464bitbaseconda1f272b08825b44268b0b382f97a12fd9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
